fixed spacing of middle segment pieces. Also, made it so that the projects page is visible on the smallest of screen sizes.

--- a/src/components/LandingPage/LPSection2/CareerGoals/CareerGoals.css
+++ b/src/components/LandingPage/LPSection2/CareerGoals/CareerGoals.css
@@ -1,12 +1,14 @@
 .CareerGoals {
     background-color: #dde5ee;
-    /* background-image: url('../ScrollPaper.jpg'); */
-    /* filter: brightness(1.4); */
-    border-radius: 40px; 
-    width: auto;
-    margin: auto;
-    max-height: fit-content;
-    margin: 30px 0px;
+    border-radius: 40px;
+    width: 100%;
+    max-width: 550px;
+    height: 100%;
+    margin: 20px auto;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 }
 
 .CareerGoalsHead {
@@ -14,36 +16,36 @@
     text-decoration-thickness: 2px;
     font-size: 26px;
     margin-top: 10px;
-    margin-bottom: 10px;
+    margin-bottom: 0px;
 }
 
 .CareerGoalsList {
-    content: flex;
+    display: flex; /* Correcting flex */
     flex-direction: column;
-    align-items: center; 
+    align-items: left;
     text-align: center;
 }
 
 .CareerGoalsList li {
     list-style-type: square;
     margin: 16px;
-    margin-left: 0px;
+    margin-left: none;
+    text-align: left;
+    
 }
 
 .CareerGoalsList li::marker {
     font-size: 20px;
+    text-align: left;
 }
 
-
 @media (min-width: 333px) and (max-width: 956px) {
-    .CareerGoals{
-        margin: 0px 0px;
-        width: auto;
+    .CareerGoals {
+        margin: none;
+        max-width: 600px;
     }
-    .CareerGoalsList {
-        width: auto;
-    }
-    .CareerGoalsList li{
+
+    .CareerGoalsList li {
         width: auto;
     }
 }
