--- a/src/components/LandingPage/LPSection2/Now/Now.css
+++ b/src/components/LandingPage/LPSection2/Now/Now.css
@@ -1,13 +1,14 @@
 .Now {
-    /* background-image: url('../ScrollPaper.jpg');
-    filter: brightness(1.4); */
     background-color: #dde5ee;
-    border-radius: 40px; 
-    height: auto;
-    width: auto;
-    margin: auto;
-    max-height: fit-content;
-    margin: none;
+    border-radius: 40px;
+    width: 100%; /* Ensures it stretches horizontally */
+    max-width: 550px;
+    height: 100%; /* Ensure it takes full vertical height */
+    margin: 20px auto;
+    display: flex;
+    flex-direction: column;
+    justify-content: center; /* Centers content */
+    align-items: center;
 }
 
 .NowHead {
@@ -15,36 +16,35 @@
     text-decoration-thickness: 2px;
     font-size: 26px;
     margin-top: 10px;
-    margin-bottom: 10px;
+    margin-bottom: 0px;
 }
 
 .NowList {
-    content: flex;
+    display: flex; /* Correcting flex */
     flex-direction: column;
-    align-items: center; 
+    align-items: left;
     text-align: center;
 }
 
 .NowList li {
     list-style-type: square;
     margin: 16px;
-    margin-left: 0px;
+    margin-left: none;
+    text-align: left;
 }
 
 .NowList li::marker {
     font-size: 20px;
+    text-align: left;
 }
 
-
 @media (min-width: 333px) and (max-width: 956px) {
-    .Now{
+    .Now {
         margin-top: 20px;
-        width: auto;
+        max-width: 600px;
     }
-    .NowList {
-        width: auto;
-    }
-    .NowList li{
+
+    .NowList li {
         width: auto;
     }
 }
