--- a/src/components/LandingPage/LPSection2/Services/Services.css
+++ b/src/components/LandingPage/LPSection2/Services/Services.css
@@ -1,13 +1,14 @@
 .Services {
-    /* background-image: url('../ScrollPaper.jpg');
-    filter: brightness(1.4); */
     background-color: #dde5ee;
-    border-radius: 40px; 
-    height: auto;
-    width: auto;
-    margin: auto;
-    max-height: fit-content;
-    margin: none;
+    border-radius: 40px;
+    width: 100%;
+    max-width: 550px;
+    height: 100%;
+    margin: 20px auto;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 }
 
 .ServicesHead {
@@ -15,38 +16,35 @@
     text-decoration-thickness: 2px;
     font-size: 26px;
     margin-top: 10px;
-    margin-bottom: 10px;
+    margin-bottom: 0px;
 }
 
 .ServicesList {
-    content: flex;
+    display: flex; /* Correcting flex */
     flex-direction: column;
-    align-items: center; 
+    align-items: center;
     text-align: center;
-    position: relative;
-    left: -10px;
 }
 
 .ServicesList li {
     list-style-type: none;
-    margin: 16px;
-    margin-left: 0px;
+    margin: 14px;
+    margin-left: -15px;
+    text-align: center;
 }
 
 .ServicesList li::marker {
     font-size: 20px;
+
 }
 
-
 @media (min-width: 333px) and (max-width: 956px) {
-    .Services{
+    .Services {
         margin-bottom: 20px;
-        width: auto;
+        max-width: 600px;
     }
-    .ServicesList {
-        width: auto;
-    }
-    .ServicesList li{
+
+    .ServicesList li {
         width: auto;
     }
 }
