--- a/src/components/Projects/MyWork/MyWork.css
+++ b/src/components/Projects/MyWork/MyWork.css
@@ -1,13 +1,19 @@
 .Hosting-Format {
+    background-color: #dde5ee;
+    border-style: solid;
+    border-width: 2px;
+    border-bottom-left-radius: 20px;
+    border-bottom-right-radius: 20px;
     display: flex;
     flex-direction: row;
     margin: auto;
     width: 50%;
     justify-content: center;
     align-items: center;
-    padding-top: 30px;
+    padding-top: 18px;
+    padding-bottom: 20px;
     font-size: 20px;
-
+    max-width: 400px;
 }
 
 
@@ -36,7 +42,7 @@
 }
 
 
-@media (max-width: 1395px) {
+@media (max-width: 1505px) {
     .container-MyWork {
         display: grid; /* Use CSS Grid for layout */
         grid-template-columns: repeat(2, 1fr); /* Three columns of equal width */
@@ -46,7 +52,7 @@
         width: auto;
     }
 
-    @media (max-width: 830px) {
+    @media (max-width: 1010px) {
         .container-MyWork {
             display: grid; /* Use CSS Grid for layout */
             grid-template-columns: repeat(1, 1fr); /* Three columns of equal width */
